<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alanv.practicaandroid.MainMenu">

    <Button
        android:id="@+id/ranquing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/jugar"
        android:layout_below="@+id/jugar"
        android:layout_marginTop="42dp"
        android:text="@string/ranking" />

    <Button
        android:id="@+id/jugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/ajustaments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ranquing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/quant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ranquing"
        android:layout_below="@+id/ajustaments"
        android:layout_marginTop="38dp"
        android:text="@string/about" />
</RelativeLayout>
