<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alanv.practicaandroid.TikTakToeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="xOrO" />

            <Button
                android:id="@+id/uno"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="xOrO" />

            <Button
                android:id="@+id/dos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="xOrO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tres"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="xOrO" />

            <Button
                android:id="@+id/cuatro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="xOrO" />

            <Button
                android:id="@+id/cinco"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="xOrO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seis"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="xOrO" />

            <Button
                android:id="@+id/siete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="xOrO" />

            <Button
                android:id="@+id/ocho"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="xOrO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playerOne" />

            <TextView
                android:id="@+id/playerTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playerTwo" />

            <TextView
                android:id="@+id/who"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play" />

            <TextView
                android:id="@+id/gameOver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/over"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/reboot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reboot"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
